edit: new contact page

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -31,8 +31,8 @@
                     target="_blank">GitHub</a>
                 <a href="https://linkedin.com/in/lucasaguiar" class="link black hover-blue dib mv2"
                     target="_blank">LinkedIn</a>
-                <a href="https://buymeacoffee.com/lucasaguiar" class="link black hover-blue dib mv2" target="_blank">Buy
-                    Me a Coffee</a>
+                {{ partial "buy-me-coffee.html" . }}
+
             </div>
         </div>
     </aside>
