wip: version in the page

--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,2 +1,3 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 <script type="text/javascript" src="/js/social-buttons.js"></script>
+<script type="text/javascript" src="/js/repo-version.js"></script>
