--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,8 +1,11 @@
 <footer class="{{ .Site.Params.background_color_class | default " bg-black" }} bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="{{ .Site.Home.Permalink }}">
       &copy; Lucas Fernandes Aguiar 2023 - {{ now.Format "2006"}}. All rights reserved.
     </a>
-    <div>{{ partial "social-follow.html" . }}</div>
+    <div class="flex items-center">
+      {{ partial "repo-version.html" . }}
+      <div class="ml3">{{ partial "social-follow.html" . }}</div>
+    </div>
   </div>
 </footer>
