fix: replaced pictures

--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -19,12 +19,12 @@
     <aside class="w-25-l w-100 pl3-l order-3">
         <div class="profile-card sticky top-2 bg-white pa3 br2 shadow-4">
             <div class="circle-mask mb3">
-                <img src="/images/Lucas Perfil 2022.jpg" alt="Lucas Aguiar" class="w-100">
+                <img src="https://lucasaguiarxyzstorage.blob.core.windows.net/images/lucas-perfil-2022.jpg"
+                    alt="Lucas Aguiar" class="w-100">
             </div>
             <div class="social-links flex flex-column">
-                <a href="https://github.com/lucasaguiar" class="link black hover-blue dib mv2"
-                    target="_blank">GitHub</a>
-                <a href="https://linkedin.com/in/lucasaguiar" class="link black hover-blue dib mv2"
+                <a href="https://github.com/isfttr" class="link black hover-blue dib mv2" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/lucas-fernandes-aguiar" class="link black hover-blue dib mv2"
                     target="_blank">LinkedIn</a>
                 <a href="https://buymeacoffee.com/lucasaguiar" class="link black hover-blue dib mv2" target="_blank">Buy
                     Me a Coffee</a>
