--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -23,12 +23,17 @@
                     alt="Lucas Aguiar" class="w-100">
             </div>
             <div class="social-links flex flex-column">
-                <a href="https://github.com/isfttr" class="link black hover-blue dib mv2" target="_blank">GitHub</a>
+                <a href="https://github.com/isfttr" class="link black hover-blue dib mv2" target="_blank"><i
+                        class="fab fa-github mr2"></i>GitHub</a>
                 <a href="https://linkedin.com/in/lucas-fernandes-aguiar" class="link black hover-blue dib mv2"
-                    target="_blank">LinkedIn</a>
-                <a href="https://buymeacoffee.com/lucasaguiar" class="link black hover-blue dib mv2" target="_blank">Buy
+                    target="_blank"><i class="fab fa-linkedin mr2"></i>LinkedIn</a>
+                <a href="https://buymeacoffee.com/lucasaguiar" class="link black hover-blue dib mv2" target="_blank"><i
+                        class="fa-solid fa-coffee mr2"></i>Buy
                     Me a Coffee</a>
             </div>
+            <p class="mt3">Hi, my name is Lucas Fernandes Aguiar, brazilian chemist, specialized in
+                intellectual property, currently working at Ministério da Saúde (MS) and as
+                a PhD student at the Ceramic Materials and Nanotechnology Laboratory (LMCNano/FT/UnB).</p>
         </div>
     </aside>
 </article>
