fix: reposition of form

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -55,27 +55,24 @@
       <div class="nested-copy-line-height lh-copy f4 nested-links {{ $.Param " text_color" | default "mid-gray" }}"
         style="text-align: left;">
         {{ .Content }}
-        {{ partial "social-share.html" . }}
+        <hr>
+        {{/* Related posts */}}
+        {{- partial "related-posts.html" . -}}
+        {{/* Tags */}}
+        {{- partial "tags.html" . -}}
+        {{/* Buy me a coffee */}}
+        {{- partial "buy-me-coffee.html" . -}}
+        {{/* Social share */}}
+        {{- partial "social-share.html" . -}}
+        {{/* Contact form */}}
+        {{- partial "form-contact.html" . -}}
+
       </div>
     </article>
   </div>
-  <div class="nested-copy-line-height lh-copy {{ $.Param " post_content_classes" | default "serif" }} f4 nested-links {{
-    $.Param "text_color" | default "mid-gray" }} {{ cond (eq $.Site.Language.LanguageDirection "rtl" ) "pl4-l" "pr4-l"
-    }} w-two-thirds-l">
-    {{- partial "buy-me-coffee.html" . -}}
-    {{- partial "tags.html" . -}}
-    <div class="mt6 instapaper_ignoref">
-      {{ if .Site.Config.Services.Disqus.Shortname }}
-      {{ template "_internal/disqus.html" . }}
-      {{ end }}
-      {{ if .Site.Params.commentoEnable }}
-      {{- partial "commento.html" . -}}
-      {{ end }}
-    </div>
-  </div>
+
   <div class="flex-l mt2 mw8 center">
 
-    {{- partial "menu-contextual.html" . -}}
 
   </div>
 </article>
