feat: contact page with social media buttons

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -24,11 +24,13 @@
     <aside class="w-25-l w-100 pl3-l order-3">
         <div class="profile-card sticky top-2 bg-white pa3 br2 shadow-4">
             <div class="circle-mask mb3">
-                <img src="/images/Lucas Perfil 2022.jpg" alt="Lucas Aguiar" class="w-100">
+                <img src="https://lucasaguiarxyzstorage.blob.core.windows.net/images/lucas-perfil-2022.jpg"
+                    alt="Lucas Aguiar" class="w-100">
             </div>
             <div class="social-links flex flex-column">
                 {{ partial "github.html" . }}
                 {{ partial "linkedin.html" . }}
+                {{ partial "threads.html" . }}
                 {{ partial "buy-me-coffee.html" . }}
 
             </div>
