fix: form contact visuals

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -8,7 +8,7 @@
     <!-- TOC Section -->
     <aside class="w-20-l w-100 pr3-l order-1">
         <div class="toc-card bg-white pa3 br2 shadow-4 sticky top-2">
-            <h3 class="f4 mt0 mb3">Contents</h3>
+            <h3 class="f4 mt0 mb3 athelas">Contents</h3>
             {{ .TableOfContents }}
         </div>
     </aside>
@@ -32,7 +32,7 @@
                 {{ partial "linkedin.html" . }}
                 {{ partial "threads.html" . }}
                 {{ partial "buy-me-coffee.html" . }}
-
+                {{ partial "lattes.html" . }}
             </div>
         </div>
     </aside>
