--- a/layouts/shortcodes/social_media.html
+++ b/layouts/shortcodes/social_media.html
@@ -3,4 +3,5 @@
     {{ partial "linkedin.html" . }}
     {{ partial "buy-me-coffee.html" . }}
     {{ partial "threads.html" . }}
+    {{ partial "lattes.html" . }}
 </div>
