--- a/layouts/partials/func/style/GetMainCSS.html
+++ b/layouts/partials/func/style/GetMainCSS.html
@@ -48,11 +48,8 @@ css asset directory we (unless condition below) add to aforementioned slice */}}
 {{ with partialCached "func/style/GetResource" . . }}
 {{ if eq .MediaType.SubType "x-scss" "x-sass" "scss" "sass" }}
 {{ if hugo.IsExtended }}
-{{/* as we cannot concatenate styles of different types, we sass/scss to be transformed to css beforehand */}}
-{{ $assets_to_concat = $assets_to_concat | append (. | css.Sass) }}
-{{ else }}
-{{ partial "func/warn" (printf "Processing of stylesheet %s of type %s has been skipped. You need Hugo Extended to
-process such files." .Name .MediaType.SubType) }}
+{{ $assets_to_concat = $assets_to_concat | append (. | resources.ExecuteAsTemplate "" . | css.Sass) }}
+{{ else }}{{ partial "func/warn" (printf "Processing of stylesheet %s of type %s has been skipped. You need Hugo Extended to process such files." .Name .MediaType.SubType) }}
 {{ end }}
 {{ else }}
 {{ $assets_to_concat = $assets_to_concat | append . }}
