feat: Add Google AdSense script to website
Adds a new partial template `ads.html` that includes the Google AdSense
script. This will enable displaying ads on the website to generate
revenue.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,7 @@
 
     {{ partial "site-style.html" . }}
     {{ partial "site-scripts.html" . }}
+    {{ partial "ads.html" . }}
 
     {{ block "favicon" . }}
       {{ partialCached "site-favicon.html" . }}
