--- a/layouts/partials/repo-version.html
+++ b/layouts/partials/repo-version.html
@@ -1,4 +1,4 @@
 <span class="f6 dib white-70">
-    Version: <span id="repo-version">...</span>
+    Version: <span id="repo-version"> 0.1.6 </span>
     <span class="f7 o-70"></span>
 </span>
